Updating api and testing backend responses
