# go/model_jwt_account_details.go
@@ -1,0 +1,17 @@
+/*
+ * Test api for project
+ *
+ * This api is a test version to connect the backend and frontend
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+// JwtAccountDetails - the account details provided when the user logs in as a JWT token
+type JwtAccountDetails struct {
+
+	// The jwt token with all information.
+	JWT string `json:"JWT"`
+}
