# go/model_refresh_details.go
@@ -1,0 +1,20 @@
+/*
+ * Test api for project
+ *
+ * This api is a test version to connect the backend and frontend
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+// RefreshDetails - Details necessary to refresh the access token
+type RefreshDetails struct {
+
+	// The account ID.
+	AccountID string `json:"accountID"`
+
+	// the refreshToken used to update the acces token
+	RefreshToken string `json:"refreshToken"`
+}
